--- a/opentracing-mock/pom.xml
+++ b/opentracing-mock/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>io.opentracing</groupId>
         <artifactId>parent</artifactId>
-        <version>0.31.1-SNAPSHOT</version>
+        <version>0.31.1-WOODSTOCK</version>
     </parent>
 
     <artifactId>opentracing-mock</artifactId>
