--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>io.opentracing</groupId>
     <artifactId>parent</artifactId>
-    <version>0.31.1-SNAPSHOT</version>
+    <version>0.31.1-WOODSTOCK</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -35,8 +35,8 @@
         <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
 
         <!-- default bytecode version for src/main -->
-        <main.java.version>1.7</main.java.version>
-        <main.signature.artifact>java17</main.signature.artifact>
+        <main.java.version>1.8</main.java.version>
+        <main.signature.artifact>java18</main.signature.artifact>
 
         <!-- default bytecode version for src/test -->
         <maven.compiler.source>1.8</maven.compiler.source>
